Create basic buttons for each digit, operators, and others

--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div id='calculator'>
+            <div id='display'>
+
+            </div>
+            <div id='buttons'>
+                <button id='sqrt'>√x</button>
+                <button id='power'>x^y</button>
+                <button id='backspace'>🔙</button>
+                <button id='clear'>Clear</button>
+                <button id='1'>1</button>
+                <button id='2'>2</button>
+                <button id="3">3</button>
+                <button id="division">÷</button>
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="6">6</button>
+                <button id="multiplication">x</button>
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="9">9</button>
+                <button id="subtraction">-</button>
+                <button id="zero">0</button>
+                <button id='decimal'>.</button>
+                <button id='equal'>=</button>
+                <button id='addition'>+</button>
+
+            </div>
+        </div>
     </body>
     <script src='script.js'></script>
 </html>
