--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
                 <button id='1' class='digit'>1</button>
                 <button id='2' class='digit' >2</button>
                 <button id="3" class='digit'>3</button>
-                <button id="division">÷</button>
+                <button id="division" class='operator'>÷</button>
                 <button id="4" class='digit'>4</button>
                 <button id="5" class='digit'>5</button>
                 <button id="6" class='digit'>6</button>
-                <button id="multiplication">x</button>
+                <button id="multiplication" class='operator'>x</button>
                 <button id="7" class='digit'>7</button>
                 <button id="8" class='digit'>8</button>
                 <button id="9" class='digit'>9</button>
-                <button id="subtraction">-</button>
+                <button id="subtraction" class='operator'>-</button>
                 <button id="zero" class='digit'>0</button>
                 <button id='decimal'>.</button>
-                <button id='equal'>=</button>
-                <button id='addition'>+</button>
+                <button id='equal' class='operator'>=</button>
+                <button id='addition' class='operator'>+</button>
 
             </div>
         </div>
