Implement exponentiation function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             </div>
             <div id='buttons'>
                 <button id='sqrt'>√x</button>
-                <button id='power'>x^y</button>
+                <button id='power' class='operator'>x^y</button>
                 <button id='backspace'>🔙</button>
                 <button id='clear'>Clear</button>
                 <button id='1' class='digit'>1</button>
