--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>calculator</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <div id='calculator'>
@@ -12,9 +13,9 @@
             </div>
             <div id='buttons'>
                 <button id='sqrt'>√x</button>
-                <button id='power' class='operator'>x^y</button>
-                <button id='backspace'>🔙</button>
-                <button id='clear'>Clear</button>
+                <button id='power' class='operator'>x<sup>y</sup></button>
+                <button id='backspace' class='non-operator'><i class='material-icons'>backspace</i></button>
+                <button id='clear' class='non-operator'>Clear</button>
                 <button id='1' class='digit'>1</button>
                 <button id='2' class='digit' >2</button>
                 <button id="3" class='digit'>3</button>
