--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div id='calculator'>
+            <div>Calculator</div>
             <div id='display'>
                 0
             </div>
