Add footer as credit for project developer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
             </div>
         </div>
+        <footer>Built by <a href="https://github.com/HakNart">HarNart</a>|<a href="https://github.com/HakNart/calculator">Source code</a></footer>
     </body>
     <script src='script.js'></script>
 </html>
